# nova-zvm-virt-driver

./: .gitignore  .gitreview  .testr.conf  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/ext/: support_matrix.py
doc/source/: activeengine.rst  ci.rst  ci_arch.rst  ci_info.rst  cloudlib4zvm.rst  conf.py  configurations.rst  contributing.rst  imageguide.rst  images.rst  index.rst  planning.rst  support-matrix.ini  support-matrix.rst  topology.rst  zvm.rst
etc/: nova-zvm-oslo-conf-generator.conf
etc/nova/: nova-zvm-oslo-conf-generator.conf
nova/tests/unit/virt/zvm/: test_zvm.py
nova/virt/: __init__.py
nova/virt/zvm/: __init__.py  conf.py  configdrive.py  const.py  dist.py  driver.py  exception.py  imageop.py  instance.py  networkop.py  objects.py  opts.py  utils.py  volumeop.py
nova_zvm/tests/: test_zvm.py
nova_zvm/tests/unit/virt/zvm/: test_configdrive.py  test_driver.py  test_guest.py  test_hypervisor.py  test_utils.py  test_zvm.py
nova_zvm/virt/zvm/: __init__.py  conf.py  configdrive.py  const.py  dist.py  driver.py  exception.py  guest.py  hypervisor.py  imageop.py  instance.py  networkop.py  opts.py  utils.py  volumeop.py
tools/: build_rpm.sh  tox_install.sh
