[metadata]
name = nova-zvm-virt-driver
author = IBM
license = ASL 2.0
summary = zVM driver for OpenStack Nova.
description = Implementation of Nova virtulization driver for zVM
description-file = README.rst
home-page = https://wiki.openstack.org/wiki/Nova-z/VM
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    nova-zvm-virt-driver    
    nova/virt/zvm

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = nova_zvm/locale
domain = nova-virt-zvm-driver

[update_catalog]
domain = nova-virt-zvm-drvier
output_dir = nova_zvm/locale
input_file = nova_zvm/locale/nova-zvm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nova_zvm/locale/nova-zvm.pot

[entry_points]
oslo.config.opts =
    nova_zvm = nova.virt.zvm.opts:list_opts
